--- a/resume.html
+++ b/resume.html
@@ -11,5 +11,6 @@
     <p>This resume is hosted on AWS using DevOps automation!!</p>
     <p>Hosted successfully and created a bash script to automate the process</p>
     <p>Worked good</p>
+    <p>Git Working Properly</p>
 </body>
 </html>
