--- a/resume.html
+++ b/resume.html
@@ -12,5 +12,7 @@
     <p>Hosted successfully and created a bash script to automate the process</p>
     <p>Worked good</p>
     <p>Git Working Properly</p>
+    <p>GIT sure
+    </p>
 </body>
 </html>
